--- a/Topology.html
+++ b/Topology.html
@@ -7,8 +7,27 @@
 </head>
 
 <body>
-<div id="mynetwork"></div>
+<div class="left">
+    <table>
+        <tr>
+            <td>Start Node:</td><td><input type="text" value="A" id="start_node" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Stop Node:</td><td><input type="text" value="E" id="stop_node" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Delay Between Nodes (ms):</td><td><input type="text" value="1.0" id="delay" style="width:170px;"></td>
+        </tr>
+    </table>
+    <br>
+    <br>
+    <input type="button" onclick="startTransmission();" value="Start Packet Tranmission" style="width:50%;" id="btnDo">
+</div>
+<div class="right">
+    <div id="mynetwork"></div>
     <script type="text/javascript" src="js.js"></script>
+</div>
+
 </body>
 
 </html>
