--- a/Topology.html
+++ b/Topology.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <script type="text/javascript" src="node_modules/vis/dist/vis.js"></script>
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.js"></script>
     <link href="node_modules/vis/dist/vis.css" rel="stylesheet" type="text/css" />
 
     <link href="style.css" rel="stylesheet" type="text/css"/>
