--- a/Topology.html
+++ b/Topology.html
@@ -20,9 +20,57 @@
             <td>Delay Between Nodes (ms):</td><td><input type="text" value="1.0" id="delay" style="width:170px;"></td>
         </tr>
     </table>
-    <br>
-    <br>
     <input type="button" onclick="startTransmission();" value="Start Packet Tranmission" style="width:50%;" id="btnDo">
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td>Update From Node:</td><td><input type="text" value="A" id="start_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Update To Node:</td><td><input type="text" value="E" id="stop_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Value:</td><td><input type="text" value="1.0" id="new_link" style="width:170px;"></td>
+        </tr>
+    </table>
+    <input type="button" onclick="updateLink();" value="Update Link" style="width:50%;" id="btnDo">
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td>Delete Node:</td><td><input type="text" value="A" id="delete_node" style="width:170px;"></td>
+        </tr>
+    </table>
+    <input type="button" onclick="deleteNode();" value="Update Link" style="width:50%;" id="btnDo">
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td>Add Node Label:</td><td><input type="text" value="A" id="start_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Add Neighboor:</td><td><input type="text" value="E" id="stop_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Link Value:</td><td><input type="text" value="1.0" id="new_link" style="width:170px;"></td>
+        </tr>
+    </table>
+    <input type="button" onclick="addNode();" value="Update Link" style="width:50%;" id="btnDo">
+    <br>
+    <br>
+    <table>
+        <tr>
+            <td>Add Link From:</td><td><input type="text" value="A" id="start_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Add Link To:</td><td><input type="text" value="E" id="stop_node_link" style="width:170px;"></td>
+        </tr>
+        <tr>
+            <td>Link Value:</td><td><input type="text" value="1.0" id="new_link" style="width:170px;"></td>
+        </tr>
+    </table>
+    <input type="button" onclick="addLink();" value="Update Link" style="width:50%;" id="btnDo">
 </div>
 <div class="right">
     <div id="mynetwork"></div>
