--- a/Topology.html
+++ b/Topology.html
@@ -42,35 +42,35 @@
             <td>Delete Node:</td><td><input type="text" value="A" id="delete_node" style="width:170px;"></td>
         </tr>
     </table>
-    <input type="button" onclick="deleteNode();" value="Update Link" style="width:50%;" id="btnDo">
+    <input type="button" onclick="deleteNode();" value="Delete Node" style="width:50%;" id="btnDo">
     <br>
     <br>
     <table>
         <tr>
-            <td>Add Node Label:</td><td><input type="text" value="A" id="start_node_link" style="width:170px;"></td>
+            <td>Add Node Label:</td><td><input type="text" value="A" id="add_node_label" style="width:170px;"></td>
         </tr>
         <tr>
-            <td>Add Neighboor:</td><td><input type="text" value="E" id="stop_node_link" style="width:170px;"></td>
+            <td>Add Neighboor:</td><td><input type="text" value="E" id="neighboor_label" style="width:170px;"></td>
         </tr>
         <tr>
-            <td>Link Value:</td><td><input type="text" value="1.0" id="new_link" style="width:170px;"></td>
+            <td>Link Value:</td><td><input type="text" value="1.0" id="link_value_add" style="width:170px;"></td>
         </tr>
     </table>
-    <input type="button" onclick="addNode();" value="Update Link" style="width:50%;" id="btnDo">
+    <input type="button" onclick="addNode();" value="Add Node" style="width:50%;" id="btnDo">
     <br>
     <br>
     <table>
         <tr>
-            <td>Add Link From:</td><td><input type="text" value="A" id="start_node_link" style="width:170px;"></td>
+            <td>Add Link From:</td><td><input type="text" value="A" id="add_link_from" style="width:170px;"></td>
         </tr>
         <tr>
-            <td>Add Link To:</td><td><input type="text" value="E" id="stop_node_link" style="width:170px;"></td>
+            <td>Add Link To:</td><td><input type="text" value="E" id="add_link_to" style="width:170px;"></td>
         </tr>
         <tr>
-            <td>Link Value:</td><td><input type="text" value="1.0" id="new_link" style="width:170px;"></td>
+            <td>Link Value:</td><td><input type="text" value="1.0" id="link_value_update" style="width:170px;"></td>
         </tr>
     </table>
-    <input type="button" onclick="addLink();" value="Update Link" style="width:50%;" id="btnDo">
+    <input type="button" onclick="addLink();" value="Add Link" style="width:50%;" id="btnDo">
 </div>
 <div class="right">
     <div id="mynetwork"></div>
