testing add node

--- a/Topology.html
+++ b/Topology.html
@@ -50,7 +50,7 @@
             <td>Add Node Label:</td><td><input type="text" value="A" id="add_node_label" style="width:170px;"></td>
         </tr>
         <tr>
-            <td>Add Neighboor:</td><td><input type="text" value="E" id="neighboor_label" style="width:170px;"></td>
+            <td>Add Neighboor:</td><td><input type="text" value="E" id="neighbor_label" style="width:170px;"></td>
         </tr>
         <tr>
             <td>Link Value:</td><td><input type="text" value="1.0" id="link_value_add" style="width:170px;"></td>
